feat: Spring Boot upgrade to 3.5.14: Source code changes by OpenRewrite plugin. Also: 2 config properties are renamed.